table ui fixed on dark mode

--- a/src/styles/prime-ng-theme/_extensions.scss
+++ b/src/styles/prime-ng-theme/_extensions.scss
@@ -28,7 +28,13 @@
 
 // Dark Theme fix
 [data-bs-theme="dark"] {
-    :root {
-        --surface-c : #000;
+    .p-datatable .p-datatable-thead > tr > th,
+    .p-datatable .p-datatable-header,
+    .p-datatable .p-datatable-tbody > tr > td {
+        border-color: var(--bs-light-border-subtle);
+    }
+    .p-datatable .p-sortable-column:not(.p-highlight):hover,
+    .p-datatable.p-datatable-hoverable-rows .p-datatable-tbody > tr:not(.p-highlight):hover {
+        background: var(--bs-light-bg-subtle);
     }
 }
